make project installable

--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "touitomamout",
   "version": "1.9.0",
   "description": "An easy way to synchronize your Twitter's tweets to Mastodon & Bluesky posts.",
+  "bin": {
+    "touitomamout": "./dist/index.js"
+  },
   "scripts": {
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
     "test": "vitest",
     "prebuild": "bash scripts/build-info.sh",
     "build": "vite build",
-    "predeploy": "npm ci && npm run build",
-    "pm2": "bash deployment/pm2.sh",
-    "pm2:update": "bash deployment/pm2.sh --update",
+    "dev": "vite build --watch",
     "commitlint": "commitlint --edit",
-    "prepare": "husky"
+    "prepare": "npm run build"
   },
   "engines": {
     "node": ">=18.0.0"
